fix: resolve 16 code review findings from checkpoint 2
- CRITICAL: Create OrderServiceApplication.java (Spring Boot main class)
- CRITICAL: Create Order.java (JPA entity with 27+ fields, sequence generator)
- CRITICAL: Create OrderSagaState.java (Saga state persistence entity)
- MAJOR: Create CartDTO.java (externalized cart state DTO)
- MAJOR: Fix Inventory.java @Version type (Long→Integer) to match Liquibase schema
- MAJOR: Add /api/cart/** route to RouteConfig.java, application.yml, SecurityConfig
- MAJOR: Fix AuthenticationFilter to populate ReactiveSecurityContext for JWT auth
- MAJOR: Fix SchemaMapper column mappings for Order Service snake_case columns
- MAJOR: Align column-mapping-manifest.md with actual Liquibase schemas
- MINOR: Fix catalog-service application.yml ddl-auto (none→validate)
- MINOR: Add Apache 2.0 license header to SignonResponse.java
- MINOR: Fix manifest orders.USERID mapping to match Liquibase username column
- MINOR: Fix AuthenticationFilter /api/orders trailing slash in path matching
- MINOR: Cache SecretKey in AuthenticationFilter (performance)
- MINOR: Standardize orderId type documentation in api-contracts.md
- MINOR: Update SignonResponse docs to match actual 3-field DTO structure
- Additional: Fix JWT default secret key length (176→512 bits) for HMAC-SHA256

All 7 modules compile successfully. 86 tests pass (84 monolith + 2 gateway).
Zero compilation errors, zero test failures.